# ebook-converter-bot

./: .dockerignore  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  config.json.example  docker-compose.yml  kp3.reg  lefthook.yaml  mise.toml  pyproject.toml  renovate.json5
.github/: FUNDING.yml
ebook_converter_bot/: __init__.py  __main__.py  bot.py
ebook_converter_bot/data/: reference.docx
ebook_converter_bot/data/fonts/pdf/: README.md  adwaa_lotfi.css  amiri.css  ibm_plex_sans_arabic.css  kfgqpc_uthman_taha.css  noto_naskh_arabic.css  scheherazade_new.css  vazirmatn.css
ebook_converter_bot/data/fonts/pdf/adwaa_lotfi/: profile.json
ebook_converter_bot/data/fonts/pdf/amiri/: profile.json
ebook_converter_bot/data/fonts/pdf/ibm_plex_sans_arabic/: profile.json
ebook_converter_bot/data/fonts/pdf/kfgqpc_uthman_taha/: profile.json
ebook_converter_bot/data/fonts/pdf/licenses/: ScheherazadeNew-OFL.txt
ebook_converter_bot/data/fonts/pdf/noto_naskh_arabic/: profile.json
ebook_converter_bot/data/fonts/pdf/scheherazade_new/: profile.json
ebook_converter_bot/data/fonts/pdf/vazirmatn/: profile.json
ebook_converter_bot/data/locales/: locales.json
ebook_converter_bot/data/locales/ar/LC_MESSAGES/: ebook_converter_bot.po
ebook_converter_bot/data/locales/en/LC_MESSAGES/: ebook_converter_bot.po
ebook_converter_bot/data/locales/tr/LC_MESSAGES/: ebook_converter_bot.po
ebook_converter_bot/db/: __init__.py  curd.py  session.py
ebook_converter_bot/db/migrations/: env.py  script.py.mako
ebook_converter_bot/db/migrations/versions/: 20260518_0001_baseline.py  20260518_0002_conversion_events.py
ebook_converter_bot/db/models/: analytics.py  chat.py  conversion_event.py  preference.py  user_option_default.py
ebook_converter_bot/modules/: __init__.py  broadcast.py  converter.py  help.py  main.py  preferences.py  restart.py  stats.py
ebook_converter_bot/utils/: analytics.py  bok_to_epub.py  broadcast.py  convert.py  converter_options.py  epub.py  epub_common.py  epub_footnotes.py  epub_split.py  i18n.py  loader.py  pdf_fonts.py  supported_types.py  telegram.py  update.py
scripts/: bok_to_epub.py
tests/: test_bok_to_epub_output.py  test_broadcast_utils.py  test_convert_output_options.py  test_convert_supported_input_type.py  test_converter_options.py  test_db_curd.py  test_db_migrations.py  test_epub_footnotes.py  test_epub_split.py  test_pdf_fonts.py  test_stats_snapshot.py  test_update.py  test_user_option_defaults.py
