[project]
name = "ebook-converter-bot"
version = "0.1.0"
description = "A Telegram bot for converting E-books."
authors = [
    { name = "yshalsager", email = "contact@yshalsager.com" }
]
requires-python = ">=3.14"
dependencies = [
    "Telethon>=1.41.1",
    "cryptg>=0.5.2",
    "hachoir>=3.2.0",
    "sqlalchemy>=2.0.14",
    "lxml>=5.0.0"
]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
    "pre-commit>=4.0.0",
    "mypy>=1.18.2",
]

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
line-length = 100
src = ["ebook_converter_bot"]
target-version = "py314"

[tool.ruff.lint]
select = ["A", "B", "BLE", "C4", "C90", "DTZ", "E", "ERA", "F", "G", "I", "INP", "ISC", "N", "NPY", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W", "YTT"]
ignore = ["E501", "S307", "RET504", "S101", "D211", "D213", "ERA001", "G004", "ISC001"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.mypy]
files = ["ebook_converter_bot"]
ignore_missing_imports = true
disallow_untyped_defs = true
#disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
plugins = ["sqlalchemy.ext.mypy.plugin"]
