[project]
name = "ebook-converter-bot"
version = "0.1.0"
description = "A Telegram bot for converting E-books."
authors = [
    { name = "yshalsager", email = "contact@yshalsager.com" }
]
requires-python = ">=3.14"
dependencies = [
    "Telethon>=1.41.1",
    "cryptg>=0.5.2",
    "access-parser==0.0.6",
    "hachoir>=3.2.0",
    "sqlalchemy>=2.0.14",
    "lxml>=6.1.0",
    "pymupdf>=1.26.0"
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "pytest>=8.0.0",
    "ruff>=0.14.4",
    "ty>=0.0.15",
    "jurigged>=0.6.1",
]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
unresolved-import = "ignore"

[[tool.ty.overrides]]
include = ["ebook_converter_bot/db/models/**"]
rules = { invalid-assignment = "ignore" }

[[tool.ty.overrides]]
include = ["ebook_converter_bot/db/curd.py"]
rules = { invalid-argument-type = "ignore", no-matching-overload = "ignore", unresolved-attribute = "ignore" }

[tool.ruff]  # https://github.com/charliermarsh/ruff
fix = true
line-length = 100
src = ["ebook_converter_bot"]
target-version = "py314"

[tool.ruff.lint]
select = ["A", "B", "BLE", "C4", "C90", "DTZ", "E", "ERA", "F", "G", "I", "INP", "ISC", "N", "NPY", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W", "YTT"]
ignore = ["E501", "S307", "RET504", "S101", "D211", "D213", "ERA001", "G004", "ISC001"]
unfixable = ["ERA001", "F401", "F841", "T201", "T203"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
